unpackaged/main/default/objects/Aspect_Setting__mdt/Aspect_Setting__mdt.object-meta.xml
<CustomObject>
    <description>All Aspect data is stored here.</description>
    <label>Aspect Setting</label>
    <pluralLabel>Aspect Settings</pluralLabel>
</CustomObject>