unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Bank_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Code__c</fullName>
    <label>Bank Account Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>