unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Sort_Code__c</fullName>
    <label>Bank Sort Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>