unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Cancellation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>