unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Company_Registered_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Number__c</fullName>
    <label>Company Registered Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>