unpackaged/main/default/objects/Aspect_Setting__mdt/fields/County_State__c.field-meta.xml
<CustomField>
    <fullName>County_State__c</fullName>
    <label>County/State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>