unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Customer_Markup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Markup__c</fullName>
    <label>Customer Markup</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>