unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Deposit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Percentage__c</fullName>
    <label>Deposit Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>