unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <label>Fax Number</label>
    <type>Phone</type>
</CustomField>