unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Is_Franchisee__c.field-meta.xml
<CustomField>
    <fullName>Is_Franchisee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Franchisee</label>
    <type>Checkbox</type>
</CustomField>