unpackaged/main/default/objects/Aspect_Setting__mdt/fields/LM_Rate_For_Cash_Customers__c.field-meta.xml
<CustomField>
    <fullName>LM_Rate_For_Cash_Customers__c</fullName>
    <description>Lower Margin rate - Cash Customer Invoices</description>
    <label>LM Rate For Cash Customers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>