unpackaged/main/default/objects/Aspect_Setting__mdt/fields/LM_Rate_For_Credit_Customers__c.field-meta.xml
<CustomField>
    <fullName>LM_Rate_For_Credit_Customers__c</fullName>
    <description>Lower Margin rate - Credit customer Invoice</description>
    <label>LM Rate For Credit Customers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>