unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Material_Collection_Charge__c.field-meta.xml
<CustomField>
    <fullName>Material_Collection_Charge__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Material Collection Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>