unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>