unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Purchase_Order_Mobile_App_Limit__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Mobile_App_Limit__c</fullName>
    <description>This is the maximum limit that the Purchase Order value should be</description>
    <label>Purchase Order Mobile App Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>