unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Rescheduling_fee__c.field-meta.xml
<CustomField>
    <fullName>Rescheduling_fee__c</fullName>
    <label>Rescheduling fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>