unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Retention_Hold_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Retention_Hold_Percentage__c</fullName>
    <description>Retention hold percentage of the engineer pay</description>
    <label>Retention Hold Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>