unpackaged/main/default/objects/Aspect_Setting__mdt/fields/Retention_Maximum_Limit__c.field-meta.xml
<CustomField>
    <fullName>Retention_Maximum_Limit__c</fullName>
    <description>Maximum engineer pay hold</description>
    <label>Retention Maximum Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>