unpackaged/main/default/objects/Aspect_Setting__mdt/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <description>Current VAT rate for the company</description>
    <label>Current VAT Rate</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>