unpackaged/main/default/objects/Aspect_Setting__mdt/fields/VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_Number__c</fullName>
    <label>VAT Registration Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>