unpackaged/main/default/objects/Aspect_Setting__mdt/fields/X15_Minute_Rule__c.field-meta.xml
<CustomField>
    <fullName>X15_Minute_Rule__c</fullName>
    <inlineHelpText>Write to 3 decimal places and use this formula: (Minute/15)</inlineHelpText>
    <label>15 Minute Rule</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>